--- a/init_pyspark.ipynb
+++ b/init_pyspark.ipynb
@@ -73,35 +73,24 @@
    "source": [
     "spark = SparkSession.builder.getOrCreate()"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Lendo uma fonte de dados"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "csv_path = 'data/marcas.csv'\n",
-    "\n",
-    "df = spark.read.format('csv')\\\n",
-    "  .option('header', True)\\\n",
-    "  .load(csv_path, sep=',')\n",
-    "\n",
-    "display(df)"
-   ]
   }
  ],
  "metadata": {
-  "language_info": {
-   "name": "python"
+  "kernelspec": {
+   "display_name": "Python 3.8.10 64-bit",
+   "language": "python",
+   "name": "python3"
   },
-  "orig_nbformat": 4
+  "language_info": {
+   "name": "python",
+   "version": "3.8.10"
+  },
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
